--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Feb 2 </title>
+    <title> Feb 2 LAB </title>
     <link rel="stylesheet" href="index.css" type="text/css"/>
     
 </head>
